# django-counter-field

./: MANIFEST.in  README.rst  pyproject.toml  pyrightconfig.json  requirements.txt  runtests.py  setup.py
django_counter_field/: __init__.py  _version.py  counter.py  fields.py
django_counter_field/management/commands/: list_counters.py  rebuild_counter.py
docs/: Makefile
docs/source/: conf.py  django_model_changes.rst  index.rst
tests/: models.py  settings.py  test_e2e_django_project.py  test_formatting.py  test_typecheck.py  tests.py
